--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -3,9 +3,7 @@ version: '3.8'
 services:
   # OrderBook Data Collector (our main application)
   collector:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    image: ghcr.io/demetrius2017/data_storage/orderbook-collector:latest
     container_name: orderbook_collector
     environment:
       # External Digital Ocean Database connection
@@ -65,31 +63,12 @@ services:
     networks:
       - orderbook_network
 
-  # Nginx reverse proxy (for production)
-  nginx:
-    image: nginx:alpine
-    container_name: orderbook_nginx
-    ports:
-      - "80:80"
-      - "443:443"
-    volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
-      - ./nginx/ssl:/etc/nginx/ssl
-      - nginx_logs:/var/log/nginx
-    depends_on:
-      - collector
-    restart: unless-stopped
-    networks:
-      - orderbook_network
-
 volumes:
   redis_data:
     driver: local
   collector_logs:
     driver: local
   collector_data:
-    driver: local
-  nginx_logs:
     driver: local
 
 networks:
