--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -72,14 +72,39 @@ jobs:
           script: |
             set -e
             
-            # 1) Подготовка окружения: docker + compose
+            # 1) Подготовка окружения: Docker Engine + Compose (устойчиво к разным образам Ubuntu)
+            # 1.a) Устанавливаем Docker из официального репозитория (если отсутствует)
             if ! command -v docker >/dev/null 2>&1; then
-              apt-get update -y && apt-get install -y docker.io
+              apt-get update -y && apt-get install -y ca-certificates curl gnupg lsb-release
+              install -m 0755 -d /etc/apt/keyrings
+              if [ ! -f /etc/apt/keyrings/docker.gpg ]; then
+                curl -fsSL https://download.docker.com/linux/ubuntu/gpg | gpg --dearmor -o /etc/apt/keyrings/docker.gpg
+                chmod a+r /etc/apt/keyrings/docker.gpg
+              fi
+              . /etc/os-release
+              echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu ${VERSION_CODENAME} stable" > /etc/apt/sources.list.d/docker.list
+              apt-get update -y || true
+              # Пытаемся установить полный набор пакетов Docker, включая compose plugin
+              apt-get install -y docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin || apt-get install -y docker.io
               systemctl enable --now docker || true
             fi
+
+            # 1.b) Гарантируем наличие docker compose (v2) — fallback через установку бинаря как cli-plugin
             if ! docker compose version >/dev/null 2>&1; then
-              apt-get update -y && apt-get install -y docker-compose-plugin
+              echo "Docker Compose plugin not found via apt; installing manually..."
+              mkdir -p /usr/local/lib/docker/cli-plugins
+              OS=$(uname -s | tr '[:upper:]' '[:lower:]')
+              case "$(uname -m)" in
+                x86_64) ARCH="x86_64" ;;
+                aarch64|arm64) ARCH="aarch64" ;;
+                *) ARCH="$(uname -m)" ;;
+              esac
+              COMPOSE_VER="v2.27.1"
+              curl -L "https://github.com/docker/compose/releases/download/${COMPOSE_VER}/docker-compose-${OS}-${ARCH}" -o /usr/local/lib/docker/cli-plugins/docker-compose
+              chmod +x /usr/local/lib/docker/cli-plugins/docker-compose
             fi
+
+            # 1.c) Убеждаемся, что curl установлен
             if ! command -v curl >/dev/null 2>&1; then
               apt-get update -y && apt-get install -y curl
             fi
