--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -12,6 +12,9 @@ services:
       # Binance API (optional, public endpoints don't need keys)
       BINANCE_API_KEY: ${BINANCE_API_KEY:-}
       BINANCE_SECRET_KEY: ${BINANCE_SECRET_KEY:-}
+      # Force Futures endpoints (REST/WS)
+      BINANCE_BASE_URL: ${BINANCE_BASE_URL:-https://fapi.binance.com}
+      BINANCE_WS_URL: ${BINANCE_WS_URL:-wss://fstream.binance.com/ws/}
       
       # Application settings
       LOG_LEVEL: INFO
