--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -72,12 +72,14 @@ jobs:
           BINANCE_BASE_URL: ${{ secrets.BINANCE_BASE_URL }}
           BINANCE_WS_URL: ${{ secrets.BINANCE_WS_URL }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          ENABLE_DEPTH: ${{ secrets.ENABLE_DEPTH || 'true' }}
+          DEPTH_TOP_SYMBOLS: ${{ secrets.DEPTH_TOP_SYMBOLS || 'BTCUSDT,ETHUSDT,SOLUSDT,BNBUSDT,XRPUSDT,AVAXUSDT,MATICUSDT,LINKUSDT,ADAUSDT,DOTUSDT' }}
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: ${{ secrets.SERVER_PORT || 22 }}
-          envs: DATABASE_URL,BINANCE_API_KEY,BINANCE_SECRET_KEY,BINANCE_BASE_URL,BINANCE_WS_URL,GITHUB_TOKEN
+          envs: DATABASE_URL,BINANCE_API_KEY,BINANCE_SECRET_KEY,BINANCE_BASE_URL,BINANCE_WS_URL,GITHUB_TOKEN,ENABLE_DEPTH,DEPTH_TOP_SYMBOLS
           script: |
             set -e
 
@@ -158,6 +160,8 @@ jobs:
             BINANCE_WS_URL=${BINANCE_WS_URL:-wss://fstream.binance.com/ws/}
             LOG_LEVEL=INFO
             ENVIRONMENT=production
+            ENABLE_DEPTH=${ENABLE_DEPTH:-true}
+            DEPTH_TOP_SYMBOLS=${DEPTH_TOP_SYMBOLS:-BTCUSDT,ETHUSDT,SOLUSDT,BNBUSDT,XRPUSDT,AVAXUSDT,MATICUSDT,LINKUSDT,ADAUSDT,DOTUSDT}
             EOF
 
             # 4) Забираем актуальный docker-compose.production.yml
