--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -8,31 +8,35 @@ services:
     environment:
       # External Digital Ocean Database connection
       DATABASE_URL: ${DATABASE_URL}
-      
+
       # Binance API (optional, public endpoints don't need keys)
       BINANCE_API_KEY: ${BINANCE_API_KEY:-}
       BINANCE_SECRET_KEY: ${BINANCE_SECRET_KEY:-}
       # Force Futures endpoints (REST/WS)
       BINANCE_BASE_URL: ${BINANCE_BASE_URL:-https://fapi.binance.com}
       BINANCE_WS_URL: ${BINANCE_WS_URL:-wss://fstream.binance.com/ws/}
-      
+
       # Application settings
-      LOG_LEVEL: INFO
-      ENVIRONMENT: production
-      
+      LOG_LEVEL: "INFO"
+      ENVIRONMENT: "production"
+
       # Monitoring
-      ENABLE_MONITORING: true
-      MONITORING_PORT: 8000
-      
+      ENABLE_MONITORING: "true"
+      MONITORING_PORT: "8000"
+
       # Collection settings
-      BATCH_SIZE: 500
-      FLUSH_INTERVAL: 30
-      MAX_RETRIES: 5
-      
+      BATCH_SIZE: "500"
+      FLUSH_INTERVAL: "30"
+      MAX_RETRIES: "5"
+
+      # Depth stream (optional)
+      ENABLE_DEPTH: ${ENABLE_DEPTH:-true}
+      DEPTH_TOP_SYMBOLS: ${DEPTH_TOP_SYMBOLS:-BTCUSDT,ETHUSDT,SOLUSDT,BNBUSDT,XRPUSDT,AVAXUSDT,MATICUSDT,LINKUSDT,ADAUSDT,DOTUSDT}
+
       # Market Maker Analysis Focus
-      SYMBOLS_CONFIG: mm_focused
-      TOTAL_SYMBOLS: 200
-      SHARDS: 5
+      SYMBOLS_CONFIG: "mm_focused"
+      TOTAL_SYMBOLS: "200"
+      SHARDS: "5"
     ports:
       - "8000:8000"  # Monitoring dashboard
     volumes:
