ci(deploy): exclude collector/monitoring and collector/docs from auto-deploy triggers to avoid restarts on non-critical changes

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,7 +4,11 @@ on:
   push:
     branches: [master, main]
     paths:
+      # Включаем общий код коллектора, но исключаем мониторинг и документацию
       - 'collector/**'
+      - '!collector/monitoring/**'
+      - '!collector/docs/**'
+      # Инфраструктура
       - 'Dockerfile'
       - 'docker-compose.production.yml'
       - 'requirements.txt'
