--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -98,13 +98,16 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           ENABLE_DEPTH: ${{ secrets.ENABLE_DEPTH || 'true' }}
           DEPTH_TOP_SYMBOLS: ${{ secrets.DEPTH_TOP_SYMBOLS || 'BTCUSDT,ETHUSDT,SOLUSDT,BNBUSDT,XRPUSDT,AVAXUSDT,MATICUSDT,LINKUSDT,ADAUSDT,DOTUSDT' }}
+          # Управление набором активных символов
+          STARTING_SYMBOL: ${{ secrets.STARTING_SYMBOL || 'SOLUSDT' }}
+          TOTAL_SYMBOLS: ${{ secrets.TOTAL_SYMBOLS || '4' }}
           IMAGE_TAG: ${{ env.IMAGE_TAG }}
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: ${{ secrets.SERVER_PORT || 22 }}
-          envs: DATABASE_URL,BINANCE_API_KEY,BINANCE_SECRET_KEY,BINANCE_BASE_URL,BINANCE_WS_URL,GITHUB_TOKEN,ENABLE_DEPTH,DEPTH_TOP_SYMBOLS,IMAGE_TAG
+          envs: DATABASE_URL,BINANCE_API_KEY,BINANCE_SECRET_KEY,BINANCE_BASE_URL,BINANCE_WS_URL,GITHUB_TOKEN,ENABLE_DEPTH,DEPTH_TOP_SYMBOLS,STARTING_SYMBOL,TOTAL_SYMBOLS,IMAGE_TAG
           script: |
             set -e
 
@@ -187,6 +190,8 @@ jobs:
             ENVIRONMENT=production
             ENABLE_DEPTH=${ENABLE_DEPTH:-true}
             DEPTH_TOP_SYMBOLS=${DEPTH_TOP_SYMBOLS:-BTCUSDT,ETHUSDT,SOLUSDT,BNBUSDT,XRPUSDT,AVAXUSDT,MATICUSDT,LINKUSDT,ADAUSDT,DOTUSDT}
+            STARTING_SYMBOL=${STARTING_SYMBOL:-SOLUSDT}
+            TOTAL_SYMBOLS=${TOTAL_SYMBOLS:-4}
             IMAGE_TAG=${IMAGE_TAG}
             EOF
 
