ci: fix symbol-ingestion-check workflow and add DB fallback via symbol_probe
- Clean YAML, remove stray lines, ensure proper shell flow
- Add robust DB-based fallback: docker exec collector container -> python -m collector.tools.symbol_probe
- Exit non-zero if missing/no updates in last 5m

plan: verify per-symbol ingestion for SOLUSDT,FIOUSDT,MLNUSDT,GHSTUSDT

--- a/.github/workflows/symbol-ingestion-check.yml
+++ b/.github/workflows/symbol-ingestion-check.yml
@@ -45,6 +45,21 @@ jobs:
               fi
             done
             if [ -n "$(echo $MISSING | tr -d ' ')" ]; then
-              echo "MISSING_SYMBOLS:$MISSING"
-              exit 1
+              echo "-- Fallback: DB-based verification via container --"
+              CID=$(docker ps --format '{{.ID}} {{.Names}} {{.Image}}' | grep -Ei 'collector|orderbook' | head -n1 | awk '{print $1}')
+              if [ -z "$CID" ]; then
+                echo "No collector container found for DB probe"
+                exit 1
+              fi
+              SYMS_CSV=$(printf "%s," "${SYMS_ARR[@]}" | sed 's/,$//')
+              set +e
+              docker exec "$CID" python -m collector.tools.symbol_probe --symbols "$SYMS_CSV" --minutes 5 > /tmp/probe.json
+              STATUS=$?
+              set -e
+              cat /tmp/probe.json || true
+              if [ $STATUS -ne 0 ]; then
+                echo "DB fallback indicates missing/no-updates in last 5m"
+                exit 1
+              fi
             fi
+            echo "All symbols verified (API and/or DB fallback)."
