--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,10 @@ name: 🚀 Deploy PostgreSQL OrderBook Collector
 
 on:
   push:
-    branches: [master, main]
+    branches:
+      - master
+      - main
+      - feature/ds-spec-streams-depth
     paths:
       # Включаем общий код коллектора, но исключаем мониторинг и документацию
       - 'collector/**'
