ci: fix IMAGE_TAG to use commit SHA (tag-safe) for feature branch builds

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,7 +37,8 @@ env:
   # Use a lowercase GHCR repository path to comply with Docker naming rules
   IMAGE_NAME: demetrius2017/data_storage/orderbook-collector
   # Deterministic tag to avoid 'latest' ambiguity; branch-shortSHA
-  IMAGE_TAG: ${{ github.ref_name }}-${{ github.sha }}
+  # Use commit SHA as deterministic, tag-safe image tag
+  IMAGE_TAG: ${{ github.sha }}
 
 jobs:
   build-and-deploy:
