deploy: wire ENABLE_MARK_PRICE/ENABLE_FORCE_ORDER through workflow and compose; fix compose YAML; enable optional MultiStream worker and SSL for markPrice/forceOrder; add helper runner

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -102,6 +102,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           ENABLE_DEPTH: ${{ secrets.ENABLE_DEPTH || 'true' }}
           DEPTH_TOP_SYMBOLS: ${{ secrets.DEPTH_TOP_SYMBOLS || 'BTCUSDT,ETHUSDT,SOLUSDT,BNBUSDT,XRPUSDT,AVAXUSDT,MATICUSDT,LINKUSDT,ADAUSDT,DOTUSDT' }}
+          ENABLE_MARK_PRICE: ${{ secrets.ENABLE_MARK_PRICE || 'true' }}
+          ENABLE_FORCE_ORDER: ${{ secrets.ENABLE_FORCE_ORDER || 'true' }}
           # Управление набором активных символов
           STARTING_SYMBOL: ${{ secrets.STARTING_SYMBOL || 'SOLUSDT' }}
           TOTAL_SYMBOLS: ${{ secrets.TOTAL_SYMBOLS || '4' }}
@@ -111,7 +113,7 @@ jobs:
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: ${{ secrets.SERVER_PORT || 22 }}
-          envs: DATABASE_URL,BINANCE_API_KEY,BINANCE_SECRET_KEY,BINANCE_BASE_URL,BINANCE_WS_URL,GITHUB_TOKEN,ENABLE_DEPTH,DEPTH_TOP_SYMBOLS,STARTING_SYMBOL,TOTAL_SYMBOLS,IMAGE_TAG
+          envs: DATABASE_URL,BINANCE_API_KEY,BINANCE_SECRET_KEY,BINANCE_BASE_URL,BINANCE_WS_URL,GITHUB_TOKEN,ENABLE_DEPTH,DEPTH_TOP_SYMBOLS,ENABLE_MARK_PRICE,ENABLE_FORCE_ORDER,STARTING_SYMBOL,TOTAL_SYMBOLS,IMAGE_TAG
           script: |
             set -e
 
@@ -194,6 +196,8 @@ jobs:
             ENVIRONMENT=production
             ENABLE_DEPTH=${ENABLE_DEPTH:-true}
             DEPTH_TOP_SYMBOLS=${DEPTH_TOP_SYMBOLS:-BTCUSDT,ETHUSDT,SOLUSDT,BNBUSDT,XRPUSDT,AVAXUSDT,MATICUSDT,LINKUSDT,ADAUSDT,DOTUSDT}
+            ENABLE_MARK_PRICE=${ENABLE_MARK_PRICE:-true}
+            ENABLE_FORCE_ORDER=${ENABLE_FORCE_ORDER:-true}
             STARTING_SYMBOL=${STARTING_SYMBOL:-SOLUSDT}
             TOTAL_SYMBOLS=${TOTAL_SYMBOLS:-4}
             IMAGE_TAG=${IMAGE_TAG}
