chore: retrigger deploy workflow with a small infra change

--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -85,3 +85,4 @@ networks:
     ipam:
       config:
         - subnet: 172.20.0.0/16
+# retrigger: ensure deploy workflow picks up latest changes (no functional impact)
